--- a/Develop/style.css
+++ b/Develop/style.css
@@ -53,12 +53,11 @@ header {
 }
 
 .header1 {
-  float:left;
-  align-self: center;
+  float: left;
 }
+
 .header2 {
   float: right;
-  align-self: center;
 }
 
 .card-body {
@@ -84,55 +83,56 @@ header {
 }
 
 .btn {
-  background:linear-gradient(to bottom, #af0808 5%, #944444 100%);
-  background-color:#af0808;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
-  border-radius:28px;
+  background: linear-gradient(to bottom, #af0808 5%, #944444 100%);
+  background-color: #af0808;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px 0px;
+  border-radius: 28px;
   border: none;
   outline: none;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-  font-size:21px;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 21px;
   margin: 16px 16px 16px 20px;
-	padding:16px 39px;
-  text-decoration:none;
+  padding: 16px 39px;
+  text-decoration: none;
   text-align: center;
 }
 
 .btn:hover {
-  background:linear-gradient(to bottom, #944444 5%, #af0808 100%);
-	background-color:#944444;
+  background: linear-gradient(to bottom, #944444 5%, #af0808 100%);
+  background-color: #944444;
 }
 
 .btn:active {
-  position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
 
 .copyButton {
-	background:linear-gradient(to bottom, #af0808 5%, #944444 100%);
-	background-color:#af0808;
-  border-radius:28px;
-  border:none;
+  background: linear-gradient(to bottom, #af0808 5%, #944444 100%);
+  background-color: #af0808;
+  border-radius: 28px;
+  border: none;
   outline: none;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:13px;
-	padding:12px 20px;
-  text-decoration:none;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 13px;
+  padding: 12px 20px;
+  text-decoration: none;
 }
+
 .copyButton:hover {
-	background:linear-gradient(to bottom, #944444 5%, #af0808 100%);
-	background-color:#944444;
+  background: linear-gradient(to bottom, #944444 5%, #af0808 100%);
+  background-color: #944444;
 }
+
 .copyButton:active {
-	position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
 
 button[disabled] {
